# faiss_v

./: .gitignore  CMakeLists.txt  FaissVAssert.h  FaissVException.cpp  FaissVException.h  Heap.cpp  Heap.h  Index.cpp  Index.h  IndexFlat.cpp  IndexFlat.h  Makefile  Makefile.in  configure  configure.ac  main  main.cpp  utils.cpp  utils.h  utils_simd.cpp
.deps/: FaissVException.Po  Heap.Po  Index.Po  IndexFlat.Po  main.Po  utils.Po
gpu/: CMakeLists.txt  GPUIndex.cu  GPUIndex.h  GpuFaissVAssert.h  GpuIndex.cu  GpuIndex.h  GpuIndexFlat.cu  GpuIndexFlat.h  GpuResources.cpp  GpuResources.h  StandardGpuResources.cpp  StandardGpuResources.h
gpu/impl/: FlatIndex.cu  FlatIndex.cuh  L2Norm.cu  L2Norm.cuh
gpu/tests/: CMakeLists.txt  test_GpuIndexFlat_gpu.cpp
gpu/utils/: ConversionOperators.cuh  CopyUtils.cuh  DeviceDefs.cuh  DeviceMemory.cpp  DeviceMemory.h  DeviceTensor-inl.cuh  DeviceTensor.cuh  DeviceUtils.cpp  DeviceUtils.h  DeviceVector.cuh  Float16.cu  Float16.cuh  MathOperators.cuh  MemorySpace.cpp  MemorySpace.h  PtxUtils.cuh  ReductionOperators.cuh  Reductions.cuh  StackDeviceMemory.cpp  StackDeviceMemory.h  StaticUtils.h  Tensor-inl.cuh  Tensor.cuh  Transpose.cuh  WarpShuffles.cuh
tests/: CMakeLists.txt  test_IndexFlat_cpu.cpp
